[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tongflow"
version = "0.1.0"
description = "Python SDK for TongFlow — author plugins and run multi-modal GenAI workflows"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["pydantic>=2.0", "typing_extensions>=4.12"]
license = "AGPL-3.0-only"
authors = [{ name = "TongFlow contributors" }]
keywords = ["tongflow", "plugin", "workflow", "genai", "multimodal"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://tongflow.com"
Repository = "https://github.com/tong-io/tongflow"
Documentation = "https://github.com/tong-io/tongflow/blob/main/docs/plugins.md"
Issues = "https://github.com/tong-io/tongflow/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["tongflow*"]

[tool.setuptools.package-data]
# Bundle the ABI so a pip-installed tongflow can run workflows standalone.
# Kept in sync by `pnpm gen:abi` (see scripts/gen-abi-types.ts).
tongflow = ["_data/tongflow.abi.json"]
